# notNotOdd

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Program.cs  Readme.md  SECURITY.md  class.md  doc.md  index.js  main.js  notNotOdd.bat  notNotOdd.c  notNotOdd.h  not_not_odd.gemspec  package-lock.json  package.json  test.js
.github/workflows/: notify.yml  npm-publish.yml
build_time/: Cargo.toml
build_time/src/: main.rs
cppevenodd/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json  frate-project.json  template.json
cppevenodd/.cmake/api/v1/reply/: index-2023-12-20T04-56-34-0424.json
cppevenodd/CPM_modules/: FindCcache.cmake.cmake
cppevenodd/src/: main.cpp
lib/: not_not_odd.rb
tests/tests/: .gitignore  notes.txt  pom.xml
tests/tests/src/main/java/org/example/: Main.java  notNotOddNegCase.js  notNotOddPosCase.js
tests/tests/src/test/java/org/example/: MainTest.java
